# ska-sdp-screen-fitting

./: .gitignore  .gitlab-ci.yml  .release  Dockerfile  LICENSE  MANIFEST.skao.int  Makefile  PrivateRules.mak  README.md  pyproject.toml
resources/: skymodel.txt  solutions.h5
scripts/: analyize_screens.ipynb  analyze_screens.py
src/ska-sdp-screen-fitting/: cluster.py  h5parm.py  lib_losoto.py  lib_operations.py  make_aterm_images.py  miscellaneous.py  reweight.py  screen.py  stationscreen.py
src/ska_sdp_screen_fitting/: _logging.py  _version.py  cluster.py  h5parm.py  kl_screen.py  lib_losoto.py  lib_operations.py  main.py  make_aterm_images.py  miscellaneous.py  reweight.py  screen.py  stationscreen.py  voronoi_screen.py  writescreen_test.py
src/ska_sdp_screen_fitting/lofar/: cluster.py  deprecated_alias.py  lib_losoto.py
src/ska_sdp_screen_fitting/utils/: _logging.py  h5parm.py  multiprocmanager.py  processing_utils.py
tests/: test_fit_screens.py
