[tool.poetry]
name = "ska-sdp-screen-fitting"
version = "0.1.0"
description = ""
authors = ["chiara.salvoni <chiara.salvoni@cgi.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
