[tool.poetry]
name = "ska-sdp-screen-fitting"
version = "0.1.0"
description = ""
authors = ["chiara.salvoni <chiara.salvoni@cgi.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11" #upper boundary added for scipy compatibility
numpy = "^1.22.1"
tables = "^3.7.0"
Shapely = "^1.8.0"
astropy = "3.2.3"
Pillow = "^9.0.0"
scipy = "^1.7.3"
lsmtool = "^1.4.3"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.12b0"
flake8 = "^4.0.1"
pylint = "^2.12.2"
pylint-junit = "^0.3.2"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
build = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
