[tool.poetry]
name = "ska-sdp-screen-fitting"
version = "0.1.0"
description = ""
authors = ["chiara.salvoni <chiara.salvoni@cgi.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.1.0"
flake8 = "^4.0.1"
pylint = "^2.12.2"
pylint-junit = "^0.3.2"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
build = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ska-sdp-screen-fitting = 'ska_sdp_screen_fitting.main:start'
